Adjusted card links, adjusted the hero section for smaller screens properly, fixed dark mode css

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,12 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-/* :root {
+:root {
   --background: #F3F4F6;
   --foreground: #171717;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #171717;
     --foreground: #F3F4F6;
